# nerc-arctic-office-projects-api

./: .coverage  .env.example  .gitignore  .gitlab-ci.yml  .snyk  CHANGELOG.md  Dockerfile  Dockerfile-ci  Dockerfile-old  Dockerfile.heroku  Dockerfile.heroku-release  README.md  UPDATING_PROJECTS.md  arctic-office-project-api.paw  config.py  convert_csv_to_json.py  docker-compose.yml  manage.py  openapi.yml  projects-no-grant-reference.json  projects.csv  pyproject.toml  requirements.txt  test-results.xml
arctic_office_projects_api/: __init__.py  commands.py  errors.py  extensions.py  importing.py  logging.py  models.py  routes.py  schemas.py  schemas_extension.py  seeding.py  utils.py
arctic_office_projects_api/bulk_importer/: exception_log.txt  import_grants.py
arctic_office_projects_api/importers/: __init__.py  gtr.py
arctic_office_projects_api/main/: __init__.py  utils.py
arctic_office_projects_api/meta/: __init__.py  errors.py  utils.py
arctic_office_projects_api/resources/: allocations.py  categorisations.py  category_schemes.py  category_terms.py  funder-organisations.json  grants.py  organisations-schema.json  organisations.py  (+4 more)
bulk-importer/: import-grants.py
docker/: heroku-release.sh  postgresql-databases.sql
docs/: changelog.yml  usage.md
resources/: categories-schema.json  funder-organisations.json  organisations-schema.json  people-organisations.json
sample-client/: Dockerfile  docker-compose.yml  requirements.txt  sample-client.py
tests/: app_creation_test.py  base_test.py  conftest.py  route_error_handling_test.py  route_test.py  test_app.py  test_blueprint_main.py  test_blueprint_meta.py  test_commands.py  test_resource_allocations.py  test_resource_categorisations.py  test_resource_category_schemes.py  test_resource_category_terms.py  test_resource_grants.py  test_resource_organisations.py  test_resource_participants.py  test_resource_people.py  test_resource_projects.py
tests-old/: base_test.py  test_app.py  test_commands.py  test_resource_category_terms.py  test_resource_people.py  test_resource_projects.py
(+77 files in other folders)
