[tool.poetry]
name = "arctic-office-projects-api"
version = "0.6.1"
description = "API for exposing data about Arctic Office projects"
authors = ["BAS Web & Apps team <webapps@bas.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.0,<3.9.1 || >3.9.1,<4.0"
alembic = "^1.13.1"
asn1crypto = "^1.5.1"
attrs = "^23.2.0"
blinker = "^1.7.0"
certifi = "^2024.2.2"
cffi = "^1.16.0"
chardet = "^5.2.0"
click = "^8.1.7"
cryptography = "44.0.1"
entrypoints = "^0.4"
faker = "30.0.0"
flask = "2.3.3"
gitdb = "^4.0.11"
gitdb2 = "^4.0.2"
gitpython = "^3.1.43"
idna = "^3.6"
importlib-metadata = "^7.1.0"
importlib-resources = "^6.4.0"
iso3166 = "^2.1.1"
jsonschema = "^4.21.1"
mako = "^1.3.2"
marshmallow = "^3.21.1"
marshmallow-jsonapi = "^0.24.0"
mccabe = "^0.7.0"
pbr = "^6.0.0"
pkgutil-resolve-name = "^1.3.10"
psycopg2-binary = "^2.9.9"
pycodestyle = "^2.11.1"
pycparser = "^2.22"
pyflakes = "^3.2.0"
pyrsistent = "^0.20.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
python-editor = "^1.0.4"
pyyaml = "^6.0.1"
requests = "2.32.4"
rfc3987 = "^1.3.8"
sentry-sdk = "^2.8.0"
simplejson = "^3.19.2"
six = "^1.16.0"
smmap = "^5.0.1"
smmap2 = "^3.0.1"
stevedore = "^5.2.0"
str2bool = "^1.1"
text-unidecode = "^1.3"
typing-extensions = "^4.10.0"
ulid-py = "^1.1.0"
unittest-xml-reporting = "^3.2.0"
urllib3 = "2.5.0"
waitress = "3.0.1"
flask-reverse-proxy-fix = "^0.2.1"
werkzeug = "3.1.3"
flask-request-id-header = "^0.1.1"
flask-migrate = "^4.0.7"
sqlalchemy = "^2.0.29"
sqlalchemy-utils = "^0.41.2"
zipp = "^3.19.2"
flask-sqlalchemy = "^3.1.1"
jinja2 = "3.1.6"
msal = "^1.32.3"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"
bandit = "^1.7.9"
pytest = "^8.3.3"

[tool.coverage.run]
omit = [
    "arctic_office_projects_api/importers/gtr.py",
    "arctic_office_projects_api/seeding.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
